--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <meta
+      name="google-site-verification"
+      content="UZOcaXnekxNx3602Y3bTdmQ76izGiFgKdkMnByPC_PM"
+    />
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link
       rel="stylesheet"
@@ -18,6 +22,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <link rel="stylesheet" href="<%= BASE_URL %>main.css" />
   </head>
   <body>
     <noscript>
